# Elemento_Finito

./: CMakeLists.txt  analisis.ipynb  archivo.txt  archivo_temps.txt  fem_1d.cpp  funciones_fem.cpp  funciones_fem.hpp  graficas.py  main  notas_1.pages
include/: funciones_1d.hpp  gid_coupler.hpp  utils.hpp
main/: fem.cpp
src/: funciones_1d.cpp  gid_coupler.cpp  utils.cpp
